--- a/src/shuttle-control.html
+++ b/src/shuttle-control.html
@@ -1,38 +1,39 @@
 
             <script type='text/javascript'>
-              function render (node) {
-                try {
-                  if (typeof node !== 'object') {
-                    return
-                  }
-                  if (!node.__clone) {
-                    node.__clone = window.$.extend(true, {}, node)
-                  }
-                  new Shuttle_control({
-                    target: document.getElementById('shuttle-control-svelte-container'),
-                    props: { node: node.__clone }
-                  })
-                } catch (e) {
-                    console.log(e)
-                }
-              }
-              function update (node) {
-                if (node.__clone) {
-                  const clone = node.__clone
-                  delete node.__clone
-                  const defaultKeys = Object.keys(node._def.defaults)
-                  for (const key of Object.keys(clone)) {
-                    if (defaultKeys.indexOf(key) === -1) {
-                      delete clone[key]
+              {
+                function render (node) {
+                  try {
+                    if (typeof node !== 'object') {
+                      return
                     }
+                    if (!node.__clone) {
+                      node.__clone = window.$.extend(true, {}, node)
+                    }
+                    new Shuttle_control({
+                      target: document.getElementById('shuttle-control-svelte-container'),
+                      props: { node: node.__clone }
+                    })
+                  } catch (e) {
+                      console.log(e)
                   }
-                  Object.assign(node, clone)
                 }
-              }
-              function revert (node) {
-                delete node.__clone
-              }
-              function noop() { }
+                function update (node) {
+                  if (node.__clone) {
+                    const clone = node.__clone
+                    delete node.__clone
+                    const defaultKeys = Object.keys(node._def.defaults)
+                    for (const key of Object.keys(clone)) {
+                      if (defaultKeys.indexOf(key) === -1) {
+                        delete clone[key]
+                      }
+                    }
+                    Object.assign(node, clone)
+                  }
+                }
+                function revert (node) {
+                  delete node.__clone
+                }
+                function noop() { }
 function run(fn) {
     return fn();
 }
@@ -267,14 +268,14 @@ RED.nodes.registerType("shuttle-control", {
 	inputs: 1,
 	outputs: 1,
 	icon() {
-		return "font-awesome/fa-file-rocket";
+		return "font-awesome/fa-rocket";
 	},
-	paletteLabel: "Control Shuttle",
+	paletteLabel: "Control shuttle",
 	label() {
 		if (this.name) {
 			return this.name;
 		} else {
-			return "Control Shuttle";
+			return "Control shuttle";
 		}
 	},
 	oneditprepare() {
@@ -307,6 +308,7 @@ class Shuttle_control extends SvelteComponent {
 
 
 
+              }
             </script>
             <script type="text/x-red" data-template-name="shuttle-control">
                 <div id='shuttle-control-svelte-container'></div>
