Added basic editor for shuttle-control

--- a/src/shuttle-receive.html
+++ b/src/shuttle-receive.html
@@ -268,14 +268,14 @@ RED.nodes.registerType("shuttle-receive", {
 	inputs: 0,
 	outputs: 1,
 	icon() {
-		return "font-awesome/fa-rocket";
+		return "font-awesome/fa-envelope-open";
 	},
-	paletteLabel: "Receive message",
+	paletteLabel: "message in",
 	label() {
 		if (this.name) {
 			return this.name;
 		} else {
-			return "Receive message";
+			return "message in";
 		}
 	},
 	oneditprepare() {
