--- a/src/shuttle-send.html
+++ b/src/shuttle-send.html
@@ -268,14 +268,14 @@ RED.nodes.registerType("shuttle-send", {
 	inputs: 1,
 	outputs: 0,
 	icon() {
-		return "font-awesome/fa-rocket";
+		return "font-awesome/fa-envelope";
 	},
-	paletteLabel: "Send message",
+	paletteLabel: "message out",
 	label() {
 		if (this.name) {
 			return this.name;
 		} else {
-			return "Send message";
+			return "message out";
 		}
 	},
 	oneditprepare() {
