--- a/src/shuttle-receive.html
+++ b/src/shuttle-receive.html
@@ -3131,46 +3131,46 @@ class Group extends SvelteComponent {
 
 function get_each_context(ctx, list, i) {
 	const child_ctx = ctx.slice();
-	child_ctx[5] = list[i];
-	child_ctx[6] = list;
-	child_ctx[7] = i;
+	child_ctx[7] = list[i];
+	child_ctx[8] = list;
+	child_ctx[9] = i;
 	return child_ctx;
 }
 
-// (41:1) {#each controlNodes as controlNode (controlNode.id)}
+// (47:1) {#each controlNodes as controlNode (controlNode.id)}
 function create_each_block(key_1, ctx) {
 	let first;
 	let input;
 	let updating_checked;
 	let current;
 
-	function input_checked_binding(value) {
-		/*input_checked_binding*/ ctx[2](value, /*controlNode*/ ctx[5]);
+	function input_checked_binding_1(value) {
+		/*input_checked_binding_1*/ ctx[4](value, /*controlNode*/ ctx[7]);
 	}
 
-	function change_handler(...args) {
-		return /*change_handler*/ ctx[3](/*controlNode*/ ctx[5], ...args);
+	function change_handler_1(...args) {
+		return /*change_handler_1*/ ctx[5](/*controlNode*/ ctx[7], ...args);
 	}
 
 	function mouseenter_handler() {
-		return /*mouseenter_handler*/ ctx[4](/*controlNode*/ ctx[5]);
+		return /*mouseenter_handler*/ ctx[6](/*controlNode*/ ctx[7]);
 	}
 
 	let input_props = {
 		inline: true,
 		type: "checkbox",
-		label: /*controlNode*/ ctx[5].runtimeId
-		? /*controlNode*/ ctx[5].runtimeId
-		: "Unnamed shuttle (" + /*controlNode*/ ctx[5].id + ")"
+		label: /*controlNode*/ ctx[7].runtimeId
+		? /*controlNode*/ ctx[7].runtimeId
+		: "Unnamed shuttle (" + /*controlNode*/ ctx[7].id + ")"
 	};
 
-	if (/*node*/ ctx[0].listenTo[/*controlNode*/ ctx[5].id] !== void 0) {
-		input_props.checked = /*node*/ ctx[0].listenTo[/*controlNode*/ ctx[5].id];
+	if (/*node*/ ctx[0].listenTo[/*controlNode*/ ctx[7].id] !== void 0) {
+		input_props.checked = /*node*/ ctx[0].listenTo[/*controlNode*/ ctx[7].id];
 	}
 
 	input = new Input({ props: input_props });
-	binding_callbacks.push(() => bind(input, "checked", input_checked_binding));
-	input.$on("change", change_handler);
+	binding_callbacks.push(() => bind(input, "checked", input_checked_binding_1));
+	input.$on("change", change_handler_1);
 	input.$on("mouseenter", mouseenter_handler);
 
 	return {
@@ -3190,13 +3190,13 @@ function create_each_block(key_1, ctx) {
 			ctx = new_ctx;
 			const input_changes = {};
 
-			if (dirty & /*controlNodes*/ 2) input_changes.label = /*controlNode*/ ctx[5].runtimeId
-			? /*controlNode*/ ctx[5].runtimeId
-			: "Unnamed shuttle (" + /*controlNode*/ ctx[5].id + ")";
+			if (dirty & /*controlNodes*/ 2) input_changes.label = /*controlNode*/ ctx[7].runtimeId
+			? /*controlNode*/ ctx[7].runtimeId
+			: "Unnamed shuttle (" + /*controlNode*/ ctx[7].id + ")";
 
 			if (!updating_checked && dirty & /*node, controlNodes*/ 3) {
 				updating_checked = true;
-				input_changes.checked = /*node*/ ctx[0].listenTo[/*controlNode*/ ctx[5].id];
+				input_changes.checked = /*node*/ ctx[0].listenTo[/*controlNode*/ ctx[7].id];
 				add_flush_callback(() => updating_checked = false);
 			}
 
@@ -3220,12 +3220,33 @@ function create_each_block(key_1, ctx) {
 
 // (40:0) <Group label="Listen to:" icon="list" style="padding-top: 0px;">
 function create_default_slot(ctx) {
+	let input;
+	let updating_checked;
+	let t;
 	let each_blocks = [];
 	let each_1_lookup = new Map();
 	let each_1_anchor;
 	let current;
+
+	function input_checked_binding(value) {
+		/*input_checked_binding*/ ctx[2](value);
+	}
+
+	let input_props = {
+		inline: true,
+		type: "checkbox",
+		label: "Events from parent instance (controller)"
+	};
+
+	if (/*node*/ ctx[0].listenTo["__PARENT__"] !== void 0) {
+		input_props.checked = /*node*/ ctx[0].listenTo["__PARENT__"];
+	}
+
+	input = new Input({ props: input_props });
+	binding_callbacks.push(() => bind(input, "checked", input_checked_binding));
+	input.$on("change", /*change_handler*/ ctx[3]);
 	let each_value = /*controlNodes*/ ctx[1];
-	const get_key = ctx => /*controlNode*/ ctx[5].id;
+	const get_key = ctx => /*controlNode*/ ctx[7].id;
 
 	for (let i = 0; i < each_value.length; i += 1) {
 		let child_ctx = get_each_context(ctx, each_value, i);
@@ -3235,6 +3256,9 @@ function create_default_slot(ctx) {
 
 	return {
 		c() {
+			create_component(input.$$.fragment);
+			t = space();
+
 			for (let i = 0; i < each_blocks.length; i += 1) {
 				each_blocks[i].c();
 			}
@@ -3242,6 +3266,9 @@ function create_default_slot(ctx) {
 			each_1_anchor = empty();
 		},
 		m(target, anchor) {
+			mount_component(input, target, anchor);
+			insert(target, t, anchor);
+
 			for (let i = 0; i < each_blocks.length; i += 1) {
 				each_blocks[i].m(target, anchor);
 			}
@@ -3250,6 +3277,16 @@ function create_default_slot(ctx) {
 			current = true;
 		},
 		p(ctx, dirty) {
+			const input_changes = {};
+
+			if (!updating_checked && dirty & /*node*/ 1) {
+				updating_checked = true;
+				input_changes.checked = /*node*/ ctx[0].listenTo["__PARENT__"];
+				add_flush_callback(() => updating_checked = false);
+			}
+
+			input.$set(input_changes);
+
 			if (dirty & /*controlNodes, node, RED*/ 3) {
 				each_value = /*controlNodes*/ ctx[1];
 				group_outros();
@@ -3259,6 +3296,7 @@ function create_default_slot(ctx) {
 		},
 		i(local) {
 			if (current) return;
+			transition_in(input.$$.fragment, local);
 
 			for (let i = 0; i < each_value.length; i += 1) {
 				transition_in(each_blocks[i]);
@@ -3267,6 +3305,8 @@ function create_default_slot(ctx) {
 			current = true;
 		},
 		o(local) {
+			transition_out(input.$$.fragment, local);
+
 			for (let i = 0; i < each_blocks.length; i += 1) {
 				transition_out(each_blocks[i]);
 			}
@@ -3274,6 +3314,9 @@ function create_default_slot(ctx) {
 			current = false;
 		},
 		d(detaching) {
+			destroy_component(input, detaching);
+			if (detaching) detach(t);
+
 			for (let i = 0; i < each_blocks.length; i += 1) {
 				each_blocks[i].d(detaching);
 			}
@@ -3308,7 +3351,7 @@ function create_fragment(ctx) {
 		p(ctx, [dirty]) {
 			const group_changes = {};
 
-			if (dirty & /*$$scope, controlNodes, node*/ 259) {
+			if (dirty & /*$$scope, controlNodes, node*/ 1027) {
 				group_changes.$$scope = { dirty, ctx };
 			}
 
@@ -3335,7 +3378,7 @@ RED.nodes.registerType("shuttle-receive", {
 	color: "#D9A6AB",
 	defaults: {
 		name: { value: "", label: "Name" },
-		listenTo: { value: {} }
+		listenTo: { value: { __PARENT__: true } }
 	},
 	inputs: 0,
 	outputs: 1,
@@ -3365,14 +3408,23 @@ function instance($$self, $$props, $$invalidate) {
 	let controlNodes;
 	let { node } = $$props;
 
-	function input_checked_binding(value, controlNode) {
+	function input_checked_binding(value) {
+		if ($$self.$$.not_equal(node.listenTo["__PARENT__"], value)) {
+			node.listenTo["__PARENT__"] = value;
+			$$invalidate(0, node);
+		}
+	}
+
+	const change_handler = e => $$invalidate(0, node.listenTo["__PARENT__"] = e.detail.value, node);
+
+	function input_checked_binding_1(value, controlNode) {
 		if ($$self.$$.not_equal(node.listenTo[controlNode.id], value)) {
 			node.listenTo[controlNode.id] = value;
 			$$invalidate(0, node);
 		}
 	}
 
-	const change_handler = (controlNode, e) => $$invalidate(0, node.listenTo[controlNode.id] = e.detail.value, node);
+	const change_handler_1 = (controlNode, e) => $$invalidate(0, node.listenTo[controlNode.id] = e.detail.value, node);
 	const mouseenter_handler = controlNode => RED.view.reveal(controlNode.id);
 
 	$$self.$$set = $$props => {
@@ -3380,7 +3432,16 @@ function instance($$self, $$props, $$invalidate) {
 	};
 
 	$$invalidate(1, controlNodes = RED.nodes.filterNodes({ type: "shuttle-control" }).filter(node => node.action === "start"));
-	return [node, controlNodes, input_checked_binding, change_handler, mouseenter_handler];
+
+	return [
+		node,
+		controlNodes,
+		input_checked_binding,
+		change_handler,
+		input_checked_binding_1,
+		change_handler_1,
+		mouseenter_handler
+	];
 }
 
 class Shuttle_receive extends SvelteComponent {
